--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ phone = "416-509-3763"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "1151 Richmond Street", city = "London", region = "ON", postcode = "N6A 3K7, country = "Canada", country_code = "CA"}
+address = {street = "1151 Richmond Street", city = "London", region = "ON", postcode = "N6A 3K7", country = "Canada", country_code = "CA"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
