--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,8 +88,8 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "sberge6@uwo.ca"
-phone = "416-509-3763"
+email = "sarahberger2097@gmail.com"
+phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
